...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/secondaryLightColor"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_step_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/small_button_width"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_margin"
...
            android:background="@color/secondaryDarkColor"
            android:onClick="OnPreviousStep"
            android:padding="@dimen/small_button_padding"
            android:text="@string/previous_step_description" />

        <Button
            android:id="@+id/next_step_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/small_button_width"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/default_margin"
...
